# MemRunner

./: .env.example  .gitignore  LICENSE  README.md  launcher.py  legacy_note.md  pyproject.toml  requirements.txt  run_memrunner.py
.github/workflows/: build-apps.yml  build.yml
data/: english.txt  sample_spanish_english.csv  spanish.txt
memrunner/: browser.py  cli.py  config.py  presentation.py  text.py  ui.py  vocab_store.py
memrunner/modes/: learn.py  review.py  speed.py
